modification of mobile view add MenuButton for smaller devices fixed layout issues

--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,15 +1,24 @@
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 600px) {
     .machines {
         margin-top: 30px;
         padding: 20px;
         min-width: 410px !important;
     }
 }
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 600px) {
     .machines {
         margin-top: 10px;
+        flex-grow: initial;
+        width: 100%;
+    }
+    .machines:last-child {
+        margin-bottom: 10px;
+    }
+    .menubutton{
+        right:10px;
+        position: absolute!important;
     }
 }
 .warning{
